# Smallangle

./: .gitignore  pyproject.toml
src/smallangle/: cli.py  hello.py  smallangle.py  test.py
