[tool.poetry]
name = "smallangle"
version = "0.1.0"
description = ""
authors = ["rcdejong <rdejong256@gmail.com>"]
readme = "README.md"
packages = [{include = "smallangle", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
